# src/swagger/swagger_output.json
@@ -347,6 +347,16 @@
         }
       }
     },
+    "/api/user/local-jwt": {
+      "post": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
     "/api/supermarket": {
       "get": {
         "description": "",
